@@ -9,6 +9,7 @@ Version 1.0.1
 - Fixed minecart unduck on inclines.
 - Fixed quadbike dismount with jump key and allow to shoot big gun with action key.
 - Fixed resurfacing on underwater death.
+- Fixed ripples not appearing on water connections higher than room bottom.
 - Prevent title music audio from starting in a random place.
 - Update harpoon speed on room change.
 
